# Packages

./: .gitconfig  .rgignore  README.md  meson.build  requirements-dev.txt  requirements.txt
data/: application.in.desktop  gresource.in.xml  gschema.in.xml  meson.build
data/sql/: get.sql  insert.sql  installed.sql  random.sql  schema.sql  search-regex.sql  search.sql
data/styles/: styles.scss
scripts/: .gitignore  run
